k8s/postgres-db/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /postgres
            pathType: Prefix
            backend:
              service:
                name: postgres-db-service
                port:
                  number: 5432
